[project]
name = "ai-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "Александр Соломеин",email = "alex@callibri.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "transformers[torch] (>=4.49.0,<5.0.0)",
    "datasets (>=3.3.1,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "accelerate (>=0.26.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
